--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-scripts": "^3.0.1"
   }
 }
